# VideoToASCII

./: CMakeLists.txt  FrameProcessor.cpp  main.cpp
headers/: FrameProcessor.h  UniversalAsciiConverter.h  UniversalReader.h
include/: Aliases.h  AsciiRenderer.h  FrameProcessor.h  PixelToAsciiConverter.h  VideoProcessor.h  VideoToAsciiArtConverter.h
src/: AsciiRenderer.cpp  FrameProcessor.cpp  PixelToAsciiConverter.cpp  VideoProcessor.cpp  VideoToAsciiArtConverter.cpp
